# we-project

./: README.md
code/: .env  Cargo.toml  README.md
code/mandelbrot-renderer/: Cargo.toml  README.md
code/mandelbrot-renderer/examples/native/: main.rs
code/mandelbrot-renderer/src/: lib.rs
code/mandelbrot-renderer/src/shaders/: frag.wgsl  vert.wgsl
code/mandelguessr/: .env  Cargo.toml  README.md  diesel.toml  input.css  package-lock.json
code/mandelguessr/migrations/2024-06-24-211740_create_users/: up.sql
code/mandelguessr/migrations/2024-06-25-131817_create_games/: up.sql
code/mandelguessr/src/: lib.rs  main.rs
code/mandelguessr/src/api/: counter.rs  game.rs  mod.rs
code/mandelguessr/src/api/auth/: mod.rs  server.rs
code/mandelguessr/src/api/models/: game.rs  user.rs
code/mandelguessr/src/app/: mandelbrot.rs  mod.rs
code/mandelguessr/src/app/components/: game.rs  logout_button.rs  mandelbrot.rs  mod.rs  server_counter.rs  tech_stack_list.rs
code/mandelguessr/src/app/components/common/: login_register.rs  mandelbrot.rs  mod.rs  pill_button.rs
code/mandelguessr/src/app/routes/: content.rs  landing_page.rs  leaderboard.rs  login.rs  mod.rs  register.rs
code/mandelguessr/src/backend/: fileserv.rs  mod.rs  state.rs
code/mandelguessr/src/backend/database/: games.rs  mod.rs  schema.rs  user.rs
code/mandelguessr/src/backend/models/: user.rs
code/mandelguessr/style/: output.css
