[package]
name = "mandelbrot-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
web-time = "1"
log = "0.4"
cgmath = { git = "https://github.com/rustgd/cgmath", rev = "d5e765db61cf9039cb625a789a59ddf6b6ab2337", features = [
    "bytemuck",
] }
bytemuck = { version = "1", features = ["derive"]}
cfg-if = "1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version="0.20" }
env_logger = "0.11"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "EventListener",
    "DomRect",
] }



[dev-dependencies]
pollster = "0.3"
winit = "0.29"
cgmath = { git = "https://github.com/rustgd/cgmath", rev = "d5e765db61cf9039cb625a789a59ddf6b6ab2337" }